--- a/airline_analysis.ipynb
+++ b/airline_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,22 +77,52 @@
     }
    ],
    "source": [
-    "\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import statsmodels.api as sm\n",
-    "import sqlite3\n",
-    "\n",
-    "dfaksdake\n",
-    "#Establish connection to database\n",
-    "conn = sqlite3.connect('airline_insights.db')\n",
-    "cursor = conn.cursor()\n",
-    "\n",
-    "# Load the dataset\n",
-    "data = pd.read_csv('merged_data.csv')\n",
+    "{\n",
+    " \"cells\": [\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"### Begin by importing the following packages needed:\\n\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"import pandas as pd\\n\",\n",
+    "    \"import matplotlib.pyplot as plt\\n\",\n",
+    "    \"import seaborn as sns\\n\",\n",
+    "    \"from sklearn.cluster import KMeans\\n\",\n",
+    "    \"from sklearn.preprocessing import StandardScaler\\n\",\n",
+    "    \"import statsmodels.api as sm\\n\",\n",
+    "    \"import sqlite3\\n\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"### Let's establish a connection to our database and load our dataset:\\n\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"# Establish connection to database\\n\",\n",
+    "    \"conn = sqlite3.connect('airline_insights.db')\\n\",\n",
+    "    \"cursor = conn.cursor()\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Load the dataset\\n\",\n",
+    "    \"data = pd.read_csv('merged_data.csv')\\n\"\n",
+    "   ]\n",
+    "  }\n",
+    " ],\n",
+    " \"metadata\": {},\n",
+    " \"nbformat\": 4,\n",
+    " \"nbformat_minor\": 4\n",
+    "}\n",
     "\n",
     "# Visualization 1: Pie Chart of Total Passengers by Class\n",
     "class_distribution = data['Class'].value_counts()\n",
