--- a/airline_analysis.ipynb
+++ b/airline_analysis.ipynb
@@ -77,52 +77,26 @@
     }
    ],
    "source": [
-    "{\n",
-    " \"cells\": [\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"### Begin by importing the following packages needed:\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"import pandas as pd\\n\",\n",
-    "    \"import matplotlib.pyplot as plt\\n\",\n",
-    "    \"import seaborn as sns\\n\",\n",
-    "    \"from sklearn.cluster import KMeans\\n\",\n",
-    "    \"from sklearn.preprocessing import StandardScaler\\n\",\n",
-    "    \"import statsmodels.api as sm\\n\",\n",
-    "    \"import sqlite3\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"### Let's establish a connection to our database and load our dataset:\\n\"\n",
-    "   ]\n",
-    "  },\n",
-    "  {\n",
-    "   \"cell_type\": \"code\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"# Establish connection to database\\n\",\n",
-    "    \"conn = sqlite3.connect('airline_insights.db')\\n\",\n",
-    "    \"cursor = conn.cursor()\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"# Load the dataset\\n\",\n",
-    "    \"data = pd.read_csv('merged_data.csv')\\n\"\n",
-    "   ]\n",
-    "  }\n",
-    " ],\n",
-    " \"metadata\": {},\n",
-    " \"nbformat\": 4,\n",
-    " \"nbformat_minor\": 4\n",
-    "}\n",
+    "## Begin by importing the following packages needed:\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import statsmodels.api as sm\n",
+    "import sqlite3\n",
+    "\n",
+    "\n",
+    "#Let's establish connection to database:\n",
+    "conn = sqlite3.connect('airline_insights.db')\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Load the dataset:\n",
+    "data = pd.read_csv('merged_data.csv')\n",
+    "\n",
+    "### Segmenting Passengers for Key Insights\n",
+    "## We will start segmenting our passengers to visualize and identify key segments of the passengers based on their class, customer type, gender, age, and overall satisfaction levels.\n",
+    "### Key Questions: Which aspects of the travel experience most influence overall satisfaction?,Are there any specific areas where improvement could significantly enhance passenger satisfaction?\\n\",How do the different classes (Business, Economy, Economy Plus) rate various aspects of their travel experience?\"\n",
     "\n",
     "# Visualization 1: Pie Chart of Total Passengers by Class\n",
     "class_distribution = data['Class'].value_counts()\n",
@@ -132,20 +106,9 @@
     "plt.title('Total Passengers by Class')\n",
     "plt.axis('equal')  # Equal aspect ratio ensures the pie chart is circular.\n",
     "plt.show()\n",
-    "{\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"So Business Class has the highest percentage, which gives  \"\n",
-    "   ]\n",
-    "  },\n",
-    "{\n",
-    "   \"cell_type\": \"markdown\",\n",
-    "   \"metadata\": {},\n",
-    "   \"source\": [\n",
-    "    \"This bar chart of Total Passengers by Customer Type & Gender will help us answer these questions: What is the distribution of passengers by customer type and gender?, Are there more returning or first-time customers?, Is there a significant difference in gender for passengers? \"\n",
-    "   ]\n",
-    "  },\n",
+    "\n",
+    "## Insights from Passenger Class Distribution, Business Class has the highest percentage of passengers. This insight can help in understanding the preferences of the majority of travelers and tailoring services and marketing strategies to cater to their needs.\n",
+    "\n",
     "# Visualization 2: Bar Chart of Total Passengers by Customer Type and Gender\n",
     "customer_gender_distribution = data.groupby(['Customer Type', 'Gender_x']).size().unstack()\n",
     "\n",
