--- a/airline_analysis.ipynb
+++ b/airline_analysis.ipynb
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "## Begin by importing the following packages needed:\n",
+    "# Begin by importing the following packages needed:\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -94,9 +94,9 @@
     "# Load the dataset:\n",
     "data = pd.read_csv('merged_data.csv')\n",
     "\n",
-    "### Segmenting Passengers for Key Insights\n",
-    "## We will start segmenting our passengers to visualize and identify key segments of the passengers based on their class, customer type, gender, age, and overall satisfaction levels.\n",
-    "### Key Questions: Which aspects of the travel experience most influence overall satisfaction?,Are there any specific areas where improvement could significantly enhance passenger satisfaction?\\n\",How do the different classes (Business, Economy, Economy Plus) rate various aspects of their travel experience?\"\n",
+    "# Segmenting Passengers for Key Insights\n",
+    "# We will start segmenting our passengers to visualize and identify key segments of the passengers based on their class, customer type, gender, age, and overall satisfaction levels.\n",
+    "# Key Questions: Which aspects of the travel experience most influence overall satisfaction?,Are there any specific areas where improvement could significantly enhance passenger satisfaction?\\n\",How do the different classes (Business, Economy, Economy Plus) rate various aspects of their travel experience?\"\n",
     "\n",
     "# Visualization 1: Pie Chart of Total Passengers by Class\n",
     "class_distribution = data['Class'].value_counts()\n",
@@ -107,7 +107,7 @@
     "plt.axis('equal')  # Equal aspect ratio ensures the pie chart is circular.\n",
     "plt.show()\n",
     "\n",
-    "## Insights from Passenger Class Distribution, Business Class has the highest percentage of passengers. This insight can help in understanding the preferences of the majority of travelers and tailoring services and marketing strategies to cater to their needs.\n",
+    "# Insights from Passenger Class Distribution, Business Class has the highest percentage of passengers. This insight can help in understanding the preferences of the majority of travelers and tailoring services and marketing strategies to cater to their needs.\n",
     "\n",
     "# Visualization 2: Bar Chart of Total Passengers by Customer Type and Gender\n",
     "customer_gender_distribution = data.groupby(['Customer Type', 'Gender_x']).size().unstack()\n",
