--- a/airline_analysis.ipynb
+++ b/airline_analysis.ipynb
@@ -110,10 +110,11 @@
     "plt.axis('equal')  # Equal aspect ratio ensures the pie chart is circular.\n",
     "plt.show()\n",
     "\n",
-    "# Insights from Passenger Class Distribution, Business Class has the highest percentage of passengers. This insight can help in understanding the preferences of the majority of travelers and tailoring services and marketing strategies to cater to their needs.\n",
+    "# So what were the insights from Passenger Class Distribution: Business Class has the highest percentage of passengers. This will later help in understanding the preferences of the majority of travelers and tailoring services and marketing strategies to cater to their needs.\n",
     "\n",
     "\n",
     "# Analyzing Passenger Distribution Customer Type & Gender\n",
+    "\n",
     "# Key Questions:\n",
     "# What is the distribution of passengers by customer type & gender?\n",
     "# Are there more returning or first-time customers?\n",
@@ -134,6 +135,7 @@
     "\n",
     "\n",
     "# Analyzing Age Group Distribution across reasons of travel. We are visually using a bar chart to give a clear side by side comparision across different age groups.\n",
+    "\n",
     "# Key Questions:\n",
     "# Which age group travels the most for business vs personal?\n",
     "\n",
@@ -163,8 +165,9 @@
     "# Age Group 51- 60 are a mix, so are probably more verstatile in their preferred service offerings\n",
     "# Age Group 0-18 and 70+ are not a primary target for business purposes.\n",
     "\n",
-    "# Our next visualization will focused on passenger satisfaction across age. By using a stacked area chart, we will be able to identify how the satisfaction levels change with age.\n",
-    "# Key Questions we want to know:\n",
+    "# Our next visualization will be focused on passenger satisfaction across age. By using a stacked area chart, we will be able to identify how the satisfaction levels change with age.\n",
+    "\n",
+    "# Key Questions:\n",
     "# How does passenger satisfaction vary across different age groups?\n",
     "# Which age group has the highest level of satisfaction or dissatisfaction?\n",
     "\n",
@@ -179,14 +182,14 @@
     "plt.xticks(rotation=0)\n",
     "plt.show()\n",
     "\n",
-    "#So let's unpack & combine this with what we alreay know from before:\n",
+    "#So let's unpack & combine this with what we alreay know:\n",
     "# Age Group 19-30:\n",
     "# Shows significant dissatisfaction though moderate level of satisfaction\n",
     "# Primary travelers for business\n",
     "# Despite being a major business traveler segment, the high levels of dissatisfaction indicate a major need for targeted imrpovement.\n",
-    "# Efforts should focus on this segment needs and pain points.\n",
+    "# Efforts should focus on this segment's needs and pain points.\n",
     "\n",
-    "# Age Group 31- 60: s\n",
+    "# Age Group 31- 60: \n",
     "# Shows high level of satisfaction, suggesting current needs are being met.\n",
     "# Predominataly travels for business\n",
     "# This group is a key demographic traveler segment, and should remain a continued focus to maintain satisfaction levels.\n",
@@ -194,6 +197,12 @@
     "# Age Group 0-18 and 70+ :\n",
     "# Shows minimal travel & engagment acitivy\n",
     "# Not a primary traveler segment\n",
+    "\n",
+    "\n",
+    "# Next we are going to utilize a heatmap to help us visualize the correlation between different variables.\n",
+    "# Key Questions:\n",
+    "# How do various factors like age, flight distance, and delays correlate with passenger satisfaction?\n",
+    "# Which factors are most strongly correlated with eachother and what implications do these correlations provide?\n",
     "\n",
     "# Visualization 5: Heatmap\n",
     "\n",
@@ -219,7 +228,18 @@
     "plt.title('Correlation Heatmap')\n",
     "plt.show()\n",
     "\n",
+    "#Let's analyze:\n",
+    "# Age & Flight Distance show a slight positive correlation (.22), indicating that older passengers might tend to travel longer distances. \n",
+    "# Departure Delay & Arrival Delay show a very high correlation (.96), indicating that delays are consistent throughout the travel experience. As well, that delays have a small but negative impact on satisfaction.\n",
+    "\n",
     "# Visualzation 6: Customer Clustering\n",
+    "\n",
+    "# By utilizing a clustering visual, this will help identify distinct patterns of customers based on their characteristics (age & flight distance).\n",
+    "\n",
+    "# Key Questions:\n",
+    "# What are the distinct customer segments based on age and flight distance?\n",
+    "# How do these segments differ in terms of travel behavior and preferences?\n",
+    "# What insights can we gain about the needs and preferences of each cluster to tailor our services accordingly?\n",
     "\n",
     "# Load the dataset\n",
     "data = pd.read_csv('merged_data.csv')\n",
@@ -246,7 +266,25 @@
     "plt.ylabel('Flight Distance')\n",
     "plt.show()\n",
     "\n",
-    "#Feature Correlation Analysis  \n",
+    "# Okay! To break this down:\n",
+    "# Cluster 0 is primarily younger passengers taking shorter, more frequent trips (0-1000 miles). This group indicates they might favor convenience and efficiency.\n",
+    "# Cluster 1 is a mix of various ages taking medium to long flights (1000-4000 miles). This segment likely represents more experienced travelers, probably our business travelers. Indicating comfort and premium services would cater well to this group.\n",
+    "# Cluster 2 is a mix of varrious ages going a moderate flight distance (0-2000 miles). This group probably includes your occasional travelers, indicating a balanced mix of preferred services.\n",
+    "\n",
+    "# In conclusion, to enhance customer satisfaction & loyalty, airlines should:\n",
+    "\n",
+    "# Develop engagement strategies that are inclusive, focusing on both male and female first-time travelers. Loyalty programs could be more effective if tailored to the preferences of returning female passengers.\n",
+    "# Prioritize reducing delays, but the focus should be on enhancing overall service quality, amenities, and customer service.\n",
+    "# Improve efficiency and convenience for younger, frequent travelers.\n",
+    "# Enhance comfort and premium services for older, long- haul travlers.\n",
+    "# Maintain versatile service offerings for the 51-60 age group.\n",
+    "# Focus on business related amenties and service quality for 19-50 age group.\n",
+    "\n",
+    "\n",
+    "# Let's move into our Product Insights..\n",
+    "\n",
+    "\n",
+    "# Feature Correlation Analysis  \n",
     "# Load the dataset\n",
     "data = pd.read_csv('merged_data.csv')\n",
     "\n",
