--- a/airline_analysis.ipynb
+++ b/airline_analysis.ipynb
@@ -110,7 +110,8 @@
     "plt.axis('equal')  # Equal aspect ratio ensures the pie chart is circular.\n",
     "plt.show()\n",
     "\n",
-    "# So what were the insights from Passenger Class Distribution: Business Class has the highest percentage of passengers. This will later help in understanding the preferences of the majority of travelers and tailoring services and marketing strategies to cater to their needs.\n",
+    "# So what were the insights from Passenger Class Distribution?\n",
+    "# Business Class has the highest percentage of passengers. This will later help in understanding the preferences of the majority of travelers and tailoring services and marketing strategies to cater to their needs.\n",
     "\n",
     "\n",
     "# Analyzing Passenger Distribution Customer Type & Gender\n",
