--- a/airline_analysis.ipynb
+++ b/airline_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -272,20 +272,14 @@
     "# Cluster 1 is a mix of various ages taking medium to long flights (1000-4000 miles). This segment likely represents more experienced travelers, probably our business travelers. Indicating comfort and premium services would cater well to this group.\n",
     "# Cluster 2 is a mix of varrious ages going a moderate flight distance (0-2000 miles). This group probably includes your occasional travelers, indicating a balanced mix of preferred services.\n",
     "\n",
-    "# In conclusion, to enhance customer satisfaction & loyalty, airlines should:\n",
     "\n",
-    "# Develop engagement strategies that are inclusive, focusing on both male and female first-time travelers. Loyalty programs could be more effective if tailored to the preferences of returning female passengers.\n",
-    "# Prioritize reducing delays, but the focus should be on enhancing overall service quality, amenities, and customer service.\n",
-    "# Improve efficiency and convenience for younger, frequent travelers.\n",
-    "# Enhance comfort and premium services for older, long- haul travlers.\n",
-    "# Maintain versatile service offerings for the 51-60 age group.\n",
-    "# Focus on business related amenties and service quality for 19-50 age group.\n",
+    "# By using a correlation heatmap we are able to provide a clear and straightforward way to visualize and compare the strength and direction of correlations between multiple variables simultaneously.\n",
     "\n",
+    "# Key Questions:\n",
+    "# Which features of the travel experience have the most significant imapct on overall satisfaction?\n",
+    "# Are there any strong relationships between different aspects of the travel experience that could affect satisfaction?\n",
     "\n",
-    "# Let's move into our Product Insights..\n",
-    "\n",
-    "\n",
-    "# Feature Correlation Analysis  \n",
+    "# Visualization 7: Feature Correlation Analysis  \n",
     "# Load the dataset\n",
     "data = pd.read_csv('merged_data.csv')\n",
     "\n",
@@ -309,7 +303,22 @@
     "plt.figure(figsize=(12, 8))\n",
     "sns.heatmap(correlation_matrix, annot=formatted_corr, cmap='coolwarm', vmin=-1, vmax=1, fmt=\"\")\n",
     "plt.title('Correlation Heatmap')\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "# This tells us that:\n",
+    "# There's a moderatly postive correlation between older passengers and longer distances\n",
+    "# A very high positibve correlation beween arrival delays and pointing to consistent delays.\n",
+    "# Weak correlations between satisfaction and features like seat comfort, food and drink, inflight entertainment, leg room service, baggage handling, and clenliness. Which indicates these factors individually have minimal impact on overall satisfaction.\n",
+    "\n",
+    "\n",
+    "# In conclusion, to enhance customer satisfaction & loyalty, airlines should:\n",
+    "\n",
+    "# Develop engagement strategies that are inclusive, focusing on both male and female first-time travelers. Loyalty programs could be more effective if tailored to the preferences of returning female passengers.\n",
+    "# Prioritize reducing delays, but the focus should be on enhancing overall service quality, amenities, and customer service.\n",
+    "# Improve efficiency and convenience for younger, frequent travelers.\n",
+    "# Enhance comfort and premium services for older, long- haul travlers.\n",
+    "# Maintain versatile service offerings for the 51-60 age group.\n",
+    "# Out of all passengers, most fly Business. So, focus on business related amenties and service quality for 19-50 age group."
    ]
   }
  ],
